examples/src/main/java/eu/binarystars/cleancode/errors/ValidationException.java
package eu.binarystars.cleancode.errors;

class ValidationException extends ServiceException {
}
